trunk/yanl/examples/t1/fail/mod_div_operanzi_intregi.yanl
# La mod/div, ambii operanzi trebuie sa fie intregi

program dude;
var x,y:boolean;

function g(x:boolean):boolean
begin
  g:=not x;
end;

begin
 if ((30 mod (not g(false))) <> 0) then
	   writestring("not ok");
end.